# WORR

./: BUILDING.md  README.md  build.sh  meson.build  meson.native.ini  meson_options.txt  version.py
.github/workflows/: nightly.yml  release.yml
assets/: default.cfg
assets/botfiles/: chars.h  fw_items.c  fw_weap.c  inv.h  teamplay.h
assets/fonts/: LICENSE
assets/localization/: loc_arabic.txt  loc_bulgarian.txt  loc_chinese_simplified.txt  loc_chinese_traditional.txt  loc_czech.txt  loc_danish.txt  loc_dutch.txt  loc_english.txt  loc_finnish.txt  loc_french.txt  loc_german.txt  loc_italian.txt  loc_japanese.txt  loc_korean.txt  loc_norwegian.txt  loc_polish.txt  loc_portuguese_br.txt  loc_portuguese_pt.txt  loc_russian.txt  loc_spanish.txt  loc_swedish.txt  loc_turkish.txt
assets/maps/: worr_fr01_alpha_test.bsp  worr_fr01_bmodel_cull.bsp  worr_fr01_bmodel_instances_fog.bsp  worr_fr01_bmodel_instances_lightmapped.bsp  worr_fr01_bmodel_instances_lightmapped_fog.bsp  worr_fr01_lightgrid.bsp  worr_fr01_lightgrid_inline_receiver.bsp  worr_fr01_lightgrid_no_receiver.bsp  worr_fr01_liquid_entity_ordering.bsp  worr_fr01_model_glowmap.bsp  worr_fr01_model_md5_multijoint.bsp  worr_fr01_model_rim.bsp  worr_fr01_model_rim_occluded.bsp  worr_fr01_model_shell.bsp  worr_fr01_underwater_waterwarp.bsp  worr_fr01_viewweapon_shell_bloom.bsp  worr_fr01_viewweapon_shell_bloom_refraction.bsp  worr_fr01_world_texture_replace.bsp  worr_fr01_world_texture_replace_fog.bsp  worr_fr02_fence_cutout.bsp  worr_fr02_sprite_blend.bsp  worr_fr02_sprite_depth_write.bsp  worr_fr02_sprite_replacement.bsp  worr_fr10_rewind_mover.bsp
assets/renderer_parity/: fr01_alpha_shadow.cfg  fr01_alpha_shadow_manifest.json  fr01_alpha_test.cfg  fr01_alpha_test_manifest.json  fr01_bloom_debug.cfg  fr01_bloom_debug_manifest.json  fr01_bloom_emission.cfg  fr01_bloom_emission_manifest.json  fr01_bmodel_cull.cfg  fr01_bmodel_cull_manifest.json  fr01_bmodel_first_frame_common.cfg  fr01_bmodel_first_frame_lightmapped.cfg  fr01_bmodel_first_frame_manifest.json  fr01_bmodel_instances_fog.cfg  fr01_bmodel_instances_fog_manifest.json  fr01_bmodel_instances_lightmapped.cfg  fr01_bmodel_instances_lightmapped_fallback.cfg  fr01_bmodel_instances_lightmapped_fog.cfg  fr01_bmodel_instances_lightmapped_fog_manifest.json  fr01_bmodel_instances_lightmapped_manifest.json  fr01_bmodel_instances_unlightmapped.cfg  fr01_bmodel_instances_unlightmapped_manifest.json  fr01_bmodel_lm_wf.cfg  fr01_color_lut.cfg  fr01_color_lut_4x16.tga  fr01_color_lut_4x16_vertical.tga  fr01_color_lut_manifest.json  fr01_color_lut_vertical.cfg  fr01_dof.cfg  fr01_dof_centre_focus.cfg  fr01_dof_centre_focus_disabled.cfg  fr01_dof_disabled.cfg  fr01_dof_manifest.json  fr01_dof_menu_rect.cfg  (+118 more)
docs-dev/: audio-eax-loop-doppler-mix-stability-2026-03-22.md  auto-updater-bootstrapper.md  basew-gamedir-and-arch-runtime-layout-2026-03-16.md  bootstrap-client-in-process-sync-handoff-2026-03-25.md  bootstrap-hosted-engine-libraries-2026-03-24.md  bootstrap-session-shell-display-profile-window-creation-2026-03-25.md  bootstrap-session-shell-sync-refactor-2026-03-25.md  bootstrap-windows-client-shared-window-adoption-2026-03-25.md  bot-direct-use-save-pointer-build-fix-2026-07-01.md  cgame-viewweapon-bob-options-2026-05-06.md  cgame-weapon-bob-active-pose-fix-2026-06-12.md  cgame-weapon-bob-cvar-snake-case-2026-06-12.md  client-bootstrap-session-shell-architecture-2026-03-25.md  desktop-bootstrap-updater-2026-03-23.md  filesystem-baseq2-rerelease-path-fallback-2026-03-23.md  fr-06-t03-accessibility-defaults-and-fallback-controls-2026-03-27.md  fr-10-16-of-16-completion-audit-2026-07-20.md  fr-10-networking-suite-rebaseline-and-resource-isolation-2026-07-20.md  fr-10-roadmap-completion-audit-2026-07-13.md  fr-10-t04-default-off-native-readiness-production-pilot-2026-07-14.md  fr-10-t04-exact-bundle-acceptance-parent-2026-07-20.md  fr-10-t04-live-event-0x73-status-evidence-gate-2026-07-20.md  fr-10-t04-live-legacy-0x03-status-evidence-gate-2026-07-20.md  fr-10-t04-native-canonical-byte-codecs-2026-07-13.md  fr-10-t04-native-readiness-setting-sideband-2026-07-14.md  fr-10-t04-t05-bounded-muzzle-sequence-native-shadow-2026-07-15.md  fr-10-t04-t05-damage-indicator-native-shadow-2026-07-18.md  fr-10-t04-t05-help-path-native-shadow-2026-07-19.md  fr-10-t04-t05-mixed-game-event-native-shadow-2026-07-15.md  fr-10-t04-t05-positional-offframe-spatial-audio-native-shadow-2026-07-15.md  fr-10-t04-t05-reliable-local-spatial-audio-native-shadow-2026-07-18.md  fr-10-t04-t05-reliable-mixed-game-event-native-shadow-2026-07-18.md  fr-10-t04-t05-t07-keyed-poi-native-shadow-2026-07-20.md  fr-10-t04-t05-t08-t09-local-action-shadow-authority-receipt-2026-07-17.md  fr-10-t04-t06-native-snapshot-semantic-admission-2026-07-16.md  fr-10-t04-t06-t07-production-native-snapshot-adapters-2026-07-16.md  fr-10-t04-t06-t07-t08-t09-t14-serialized-production-snapshot-corpus-2026-07-17.md  fr-10-t04-t08-private-receipt-bounded-lifecycle-2026-07-20.md  fr-10-t05-cgame-event-runtime-and-direct-authority-export-2026-07-14.md  fr-10-t05-typed-event-journal-acceptance-closure-2026-07-19.md  (+270 more)
docs-user/: README.md  bot-chat.md  bot-cvars.md  bot-playtest.md  bot-profiles.md  bots.md  client.asciidoc  getting-started.md  progressive-networking-controls.md  server-quickstart.md  server.asciidoc
release-test-macos-support/: metadata-windows-x86_64.json  worr-client-win64.json  worr-server-win64.json
tools/: build_msi.ps1  check_shadowmapping_guardrails.py  gen_vk_world_spv.py  generate_png_rgba_header.py  llvm-ar-no-thin.py  meson_setup.cmd  meson_setup.ps1  package_assets.py  package_release.py  refresh_install.py  shadowmapping_repro_smoke.py  stage_install.py  test_package_assets.py
tools/q2aas/: README.WORR.md  audit_worr_q2aas_package.py  audit_worr_q2aas_stage.py  be_aas_bspc.c  bspc.c  map.c  meson.build  package_worr_q2aas_archive.py  test_validate_worr_q2aas.py  validate_worr_q2aas.py  validation_manifest.json  worr_q2aas_compat.h  worr_q2aas_q2trace.c  worr_q2aas_q2trace.h
tools/q2aas/cfg/: worr_q2.cfg
(+853 files in other folders)
